--- a/Essentials/wk5/gaio_npmi_cogroup.ipynb
+++ b/Essentials/wk5/gaio_npmi_cogroup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -269,10 +269,89 @@
    "outputs": [],
    "source": [
     "bigrams_filtered = bigrams.filter(lambda (x,y): x not in broadcast_var.value and y not in broadcast_var.value) \\\n",
-    ".reduceByKey(lambda x,y: x+y)\n",
+    ".reduceByKey(lambda x,y: x+y) \\\n",
+    ".filter(lambda x,y: y>=500)\n",
     "result = bigrams_filtered.take(10)\n",
     "for word in result[:10]:\n",
     "    print word"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### compute bigrams probability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bigrams_filtered_p = bigrams_filtered.map(lambda (x,y): (x,y/num_bigrams))\n",
+    "result = bigrams_filtered-_p.take(10)\n",
+    "for word in result[:10]:\n",
+    "    print word"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Join the RDDs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "join_bi_words = bigrams_filtered_p.map(lambda ((a,b),p_ab) : (a,(b,p_ab))) \\\n",
+    ".cogroup(wiki_filtered_p) \\\n",
+    ".map(lambda (a, ((b,p_ab),p_a)): (b,(a,p_a,p_ab))) \\\n",
+    ".cogroup(wiki_filtered_p) \\\n",
+    ".map(lambda (b,((a,p_a,p_ab),p_b)): ((a,b),(p_a,p_b,p_ab)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### compute NPMI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "#PMI(a, b) = ln (P(ab) / (P(a) * P(b)\n",
+    "pmi_rdd = join_bi_words.map(lambda ((a,b),(p_a,p_b,p_ab)) : ((a,b),(np.log((p_ab)/(p_a * p_b)),p_ab)))\n",
+    "#NPMI(a, b) = PMI(a, b) / -ln P(ab)\n",
+    "npmi_rdd = pmi_rdd.map(lambda ((a,b),(pmi,p_ab)): ((a,b),(pmi/-np.log(p_ab)))) \\ \n",
+    "            .sortBy(lambda (x,y): y, ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Print the results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = bigrams_filtered_p.take(39)\n",
+    "for bigram in results:\n",
+    "    print (('%s_%s') % (bigram[0][0],bigram[0][1]))"
    ]
   }
  ],
